-------------------------------------------------------------------------------------------------------
Release notes version 1.8.2_beta : Enhancements, modifications and corrected bugs since version 1.8.1 :
-------------------------------------------------------------------------------------------------------
04/09/20 (TRUST)  Change      : Reorganize _comm.TU file and add missing time counters into Quasi-Compressible model
03/09/20 (TRUST)  Bug fixed   : Raffiner_isotrope_parallele produced an error on VDF meshes
02/09/20 (TRUST)  Bug fixed   : Advanced postprocessing of source terms (cells located) was wrong in VDF/PolyMAC with: Definition_champs { FieldName Operateur_Eqn { numero_source 0 sources { ... } } } 
01/09/20 (TRUST)  New feature : Add possibility to post-process ustar with negligeable wall law in VEF discretization
18/08/20 (TRUST)  Portability : TRUST int64 version enables now MEDCoupling and MED import/export
18/08/20 (TRUST)  Tools       : Salome 9.5.0 third party supported (MED 4.1.0, MEDCoupling 9.5.0)
29/07/20 (TRUST)  Portability : Fedora32 OS and GNU 10.x supported
22/07/20 (TRUST)  Portability : First partial support on Armv8 achitecture with GNU or ARM compilers (Miniconda3 has no local channel so direct access to Internet is needed)
09/07/20 (TRUST)  New feature : Coding of the metric "Load imbalance" in the cutter and the scatter.
--------------------------------------------------------------------------------------------------
Release notes version 1.8.1 : Enhancements, modifications and corrected bugs since version 1.8.0 :
--------------------------------------------------------------------------------------------------
17/06/20 (TRUST)  Keyword     : Perte_Charge_Singuliere syntax has changed. The new syntax is: Perte_Charge_Singuliere { dir dir_val coeff/regul coeff_val/regul_bloc surface surface_bloc } (the old syntax was: Perte_Charge_Singuliere dir_val coeff_val surface_bloc )