@@ -1,11 +1,12 @@
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.8.2_beta : Enhancements, modifications and corrected bugs since version 1.8.1 :
 -------------------------------------------------------------------------------------------------------
+10/09/20 (TRUST)  Bug fixed   : Non-deterministic crash (segmentation fault) during parallel Quasi-Compressible simulation
 04/09/20 (TRUST)  Change      : Reorganize _comm.TU file and add missing time counters into Quasi-Compressible model
 03/09/20 (TRUST)  Bug fixed   : Raffiner_isotrope_parallele produced an error on VDF meshes
 02/09/20 (TRUST)  Bug fixed   : Advanced postprocessing of source terms (cells located) was wrong in VDF/PolyMAC with: Definition_champs { FieldName Operateur_Eqn { numero_source 0 sources { ... } } } 
 01/09/20 (TRUST)  New feature : Add possibility to post-process ustar with negligeable wall law in VEF discretization
-18/08/20 (TRUST)  Portability : TRUST int64 version enables now MEDCoupling and MED import/export
+18/08/20 (TRUST)  PortabiBug fixed   :lity : TRUST int64 version enables now MEDCoupling and MED import/export
 18/08/20 (TRUST)  Tools       : Salome 9.5.0 third party supported (MED 4.1.0, MEDCoupling 9.5.0)
 29/07/20 (TRUST)  Portability : Fedora32 OS and GNU 10.x supported
 22/07/20 (TRUST)  Portability : First partial support on Armv8 achitecture with GNU or ARM compilers (Miniconda3 has no local channel so direct access to Internet is needed)
